# storage/api-docs/api-docs.json
@@ -112,7 +112,7 @@
                     }
                 }
             },
-            "put": {
+            "post": {
                 "tags": [
                     "Product"
                 ],
@@ -126,7 +126,7 @@
                     {
                         "name": "name",
                         "in": "query",
-                        "required": true,
+                        "required": false,
                         "schema": {
                             "type": "string"
                         }
@@ -134,20 +134,27 @@
                     {
                         "name": "detail",
                         "in": "query",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "image",
-                        "in": "query",
                         "required": false,
                         "schema": {
                             "type": "string"
                         }
                     }
                 ],
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "file": {
+                                        "description": "image to upload",
+                                        "type": "file"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "200": {
                         "description": "Success",
